# learninglab-ai-agents-for-network-engineering

./: LAB.ipynb  README.md  analyze_syslog.py  compare_usernames.py  config-post-check-ntp.py  convert_show_run.py  hosts.json  pyproject.toml  routing_table_markdown_format.py  structured_output.py
complete_examples/: analyze_syslog.py  config-post-check-ntp.py
