[project]
name = "ai-agents-for-network-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "flopach"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "smolagents (>=1.16.1,<2.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "netmiko (>=4.5.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ncclient (>=0.6.19,<0.7.0)",
    "litellm (>=1.70.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
